# softprompts

./: .gitignore  README.md  pyproject.toml
examples/: basic.py  custom_config.py  simple.py  universal_advbench.py
softprompts/: __init__.py  softprompt.py
tests/: test_softprompt.py
