[project]
name = "softprompts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alex Serrano" }]
requires-python = ">=3.11"
dependencies = ["jaxtyping>=0.3.1", "torch>=2.6.0", "transformers>=4.50.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.ignore = ["F722"] # ignores forward annotation error in jaxtyping
